Corrected overflow issue with player list

--- a/site/src/assets/scss/_layout.scss
+++ b/site/src/assets/scss/_layout.scss
@@ -63,6 +63,10 @@ body {
   overflow-y: scroll !important;
 }
 
+.no-scroll {
+  overflow: hidden !important;
+}
+
 .band {
   display: flex;
   flex-basis: fit-content;
